--- a/gameOfLife/gameOfLife.csproj
+++ b/gameOfLife/gameOfLife.csproj
@@ -36,6 +36,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Cell.cs" />
+    <Compile Include="CellState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
