--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CellTest.cs" />
+    <Compile Include="factories\NeighbourhoodFactory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\xunit.core.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.core.props" Condition="Exists('..\packages\xunit.core.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.core.props')" />
@@ -56,5 +57,8 @@
       <Project>{E5E817C6-C873-4F07-B5D5-767172546CE6}</Project>
       <Name>gameOfLife</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="factories\" />
   </ItemGroup>
 </Project>
