--- a/gameOfLife/gameOfLife.csproj
+++ b/gameOfLife/gameOfLife.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Cell.cs" />
     <Compile Include="CellState.cs" />
+    <Compile Include="Neighbourhood.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
